@@ -18,6 +18,10 @@ export("jags.parfit", "dc.parfit",
        "clusterSize", "plotClusterSize",
        "clusterSplitSB", 
        "parLapplySB", "parLapplySLB")
+ ## parallel rjags functions
+export("parListModules", "parLoadModule", "parUnloadModule",
+      "parListFactories", "parSetFactory", "parJagsModel",
+      "parCodaSamples")
 
 ## graphical helper functions
 export("errlines")
