@@ -1,0 +1,7 @@
+parListFactories <-
+function(cl, type) 
+{
+    clusterEvalQ(cl, require(rjags))
+    clusterCall(cl, eval, list.factories(type), env = .GlobalEnv)
+}
+
