@@ -1,0 +1,7 @@
+parListModules <-
+function(cl) 
+{
+    clusterEvalQ(cl, require(rjags))
+    clusterCall(cl, eval, list.modules(), env = .GlobalEnv)
+}
+
