@@ -1,0 +1,39 @@
+\name{parLoadModule}
+\alias{parLoadModule}
+\alias{parUnloadModule}
+\alias{parListModules}
+\title{Dynamically load JAGS modules on parallel workers}
+\description{
+  A JAGS module is a dynamically loaded library that extends the
+  functionality of JAGS. These functions load and unload JAGS modules
+  and show the names of the currently loaded modules on parallel workers.
+}
+\usage{
+parLoadModule(cl, name, path, quiet=FALSE)
+parUnloadModule(cl, name, quiet=FALSE)
+parListModules(cl)
+}
+\arguments{
+  \item{cl}{a cluster object created by the \pkg{snow} package.}
+  \item{name}{name of the load module to be loaded}
+  \item{path}{file path to the location of the DLL. If omitted,
+    the option \code{jags.moddir} is used to locate the modules}
+  \item{quiet}{a logical. If \code{TRUE}, no message will be printed
+    about loading the package}
+}
+\author{Peter Solymos, \email{solymos@ualberta.ca}}
+\seealso{\code{\link[rjags]{list.modules}},
+\code{\link[rjags]{load.module}}, \code{\link[rjags]{unload.module}}}
+\examples{
+\dontrun{
+cl <- makeSOCKcluster(3)
+parListModules(cl)
+parLoadModule(cl, "glm")
+parListModules(cl)
+parUnloadModule(cl, "glm")
+parListModules(cl)
+stopCluster(cl)
+}
+}
+\keyword{interface}
+
